[project]
name = "dbos-mcp"
version = "0.1.0"
description = "MCP server for DBOS Conductor workflow introspection and management"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "DBOS, Inc." }]
license = { text = "MIT" }
keywords = ["mcp", "dbos", "workflow", "claude", "conductor"]
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.25.0",
]

[project.scripts]
dbos-mcp = "dbos_mcp.server:main"

[project.urls]
Homepage = "https://github.com/dbos-inc/dbos-mcp"
Repository = "https://github.com/dbos-inc/dbos-mcp"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
